# ai-flow

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.flow/: config.yml  pyproject.toml
.flow/src/flow/: __init__.py  blast_radius.py  cli.py  coder.py  comment_parser.py  comment_writer.py  config.py  coordinator.py  dispatch_actions.py  human_messages.py  manifest.py  merge_queue.py  metrics.py  planner.py  reconciler.py  retry.py  reviewer.py  state_machine.py
.flow/src/flow/bootstrap/: config.yml
.flow/src/flow/bootstrap/issue_template/: goal.md
.flow/src/flow/bootstrap/prompts/: implementer.md  planner.md  reviewer.md
.flow/src/flow/bootstrap/workflows/: flow-comment.yml  flow-issue.yml  flow-merge-queue.yml  flow-pr-ready.yml  flow-schedule.yml
.flow/src/flow/clients/: __init__.py  _streaming.py  copilot.py  fake.py  github.py
.flow/src/flow/handlers/: comment_handler.py  issue_handler.py  pr_handler.py  schedule_handler.py
.flow/src/flow/prompts/: __init__.py  coder.md  planner.md  reviewer.md
.flow/tests/: test_abort_cascade.py  test_blast_radius.py  test_cli.py  test_comment_handler_reaction.py  test_comment_parser.py  test_comment_writer.py  test_human_messages.py  test_manifest.py  test_planner_validation.py  test_readme.py  test_readme_usage_guide.py  test_reconciler.py  test_retry.py  test_state_machine.py  test_streaming.py
.github/workflows/: agent-comment.yml  agent-comment.yml.disabled  agent-issue.yml  agent-merge-queue.yml  agent-pr-ready.yml  agent-pr-ready.yml.disabled  flow-comment.yml  flow-issue.yml  flow-merge-queue.yml  flow-pr-ready.yml  flow-schedule.yml
ci/: gitlab-ci.yml
config/: labels.yaml
docs/: SMOKE_TEST.md
docs/superpowers/plans/: 2026-04-27-github-copilot-adapter.md  2026-04-27-github-real-path.md  2026-04-27-merge-queue.md  2026-04-27-observability.md  2026-04-27-real-coder-agent.md  2026-04-27-real-reviewer-matrix.md  2026-04-27-skeleton-mvp-gitlab-ce.md
docs/superpowers/prompts/: implementation.md
scripts/: farewell.py  hello.py  smoke_local.py
src/sw/: _subprocess_streaming.py  ac_validator.py  claude_code_client.py  coder.py  coder_gh.py  coder_stub.py  comment_parser.py  comment_writer.py  copilot_cli_client.py  github_client.py  github_dispatch.py  gitlab_client.py  label_apply.py  merge_queue.py  merge_queue_gh.py  metrics.py  report.py  reviewer.py  reviewer_fake.py  state_machine.py  webhook_relay.py
src/sw/handlers/: comment_handler.py  (+2 more)
templates/: issue_template.md  mr_template.md
tests/scripts/: test_farewell.py  test_hello.py
tests/sw/: test_ac_validator.py  test_claude_code_client.py  test_coder.py  test_coder_fake.py  test_coder_gh.py  test_comment_parser.py  test_comment_writer.py  test_copilot_cli_client.py  test_github_client.py  test_github_dispatch.py  test_gitlab_client.py  test_label_apply.py  test_merge_queue.py  test_merge_queue_gh.py  test_metrics.py  test_report.py  test_reviewer.py  test_reviewer_fake.py  test_reviewer_stub.py  test_state_machine.py  test_webhook_relay.py
(+5 files in other folders)
