[project]
name = "ai-flow"
version = "0.1.0"
description = "Recursive task scheduling + multi-Agent collaboration framework on GitHub"
requires-python = ">=3.11"
dependencies = [
    "ruamel.yaml>=0.18.0",
    "gitpython>=3.1",
    "pygithub>=2.1",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
flow = "flow.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flow = ["bootstrap/**/*", "bootstrap/**/.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Prompt templates contain long YAML/example lines that must stay verbatim
# in the rendered prompt; line breaks at source level would corrupt the
# YAML examples shown to the agent.
"src/flow/planner.py" = ["E501"]
"src/flow/coder.py" = ["E501"]
"src/flow/reviewer.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["flow"]
